--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,7 +34,7 @@
 }
 
 .container {
-  margin-top: 96px;
+  margin-top: 10em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,30 +83,24 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 96px;
+  padding: 5px;
   margin-bottom: 96px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-content: flex-start;
 }
 
-.left {
+.left, .right {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-left: 5%;
-}
-
-.right {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: row;
-  margin-right: 5%;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .secondaryButton {
